# cargo-patch

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: build.yml
src/: lib.rs  main.rs
tests/: common.rs  patch_crates_io.rs  patch_create_and_delete.rs  patch_empty.rs  patch_err.rs  patch_git.rs  patch_github_pr_diff.rs  patch_using_build_rs.rs
