[package]
name = "cargo-patch"
version = "0.3.2"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Cargo Subcommand for patching dependencies using patch files"
license = "MIT"
repository = "https://github.com/mettke/cargo-patch"
readme = "README.md"
keywords = ["cargo", "patch", "dependency", "dependencies", "patchfile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
cargo = "0.72"
fs_extra = "1"
patch = "0.7"
semver = "1"
toml = "0.8"

[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git", version = "0.1.0", tag = "0.72.1" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git", version = "0.1.0", tag = "0.72.1" }
