[package]
name = "cargo-patch"
version = "0.3.2"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Cargo Subcommand for patching dependencies using patch files"
license = "MIT"
repository = "https://github.com/mettke/cargo-patch"
readme = "README.md"
keywords = ["cargo", "patch", "dependency", "dependencies", "patchfile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
cargo = "0.82.0"
fs_extra = "1.3.0"
patch = "0.7"
semver = "1.0.23"
toml = "0.8.19"

[dev-dependencies]
cargo-test-macro = "0.3.0"
cargo-test-support = "0.3.0"
